; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/extr_opus_header.c_comment_init.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/extr_opus_header.c_comment_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"unknown\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"OpusTags\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64*, i8*)* @comment_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @comment_init(i64* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  store i64* %0, i64** %4, align 8
  store i8* %1, i8** %5, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  br label %13

13:                                               ; preds = %12, %2
  %14 = load i8*, i8** %5, align 8
  %15 = call i64 @strlen(i8* %14)
  store i64 %15, i64* %6, align 8
  store i64 0, i64* %7, align 8
  %16 = load i64, i64* %6, align 8
  %17 = add i64 12, %16
  %18 = add i64 %17, 4
  store i64 %18, i64* %8, align 8
  %19 = load i64, i64* %8, align 8
  %20 = call i8* @malloc(i64 %19)
  store i8* %20, i8** %9, align 8
  %21 = load i8*, i8** %9, align 8
  %22 = icmp eq i8* %21, null
  br i1 %22, label %23, label %24

23:                                               ; preds = %13
  store i8* null, i8** %3, align 8
  br label %45

24:                                               ; preds = %13
  %25 = load i8*, i8** %9, align 8
  %26 = call i32 @memcpy(i8* %25, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i64 8)
  %27 = load i8*, i8** %9, align 8
  %28 = getelementptr inbounds i8, i8* %27, i64 8
  %29 = load i64, i64* %6, align 8
  %30 = call i32 @SetDWLE(i8* %28, i64 %29)
  %31 = load i8*, i8** %9, align 8
  %32 = getelementptr inbounds i8, i8* %31, i64 12
  %33 = load i8*, i8** %5, align 8
  %34 = load i64, i64* %6, align 8
  %35 = call i32 @memcpy(i8* %32, i8* %33, i64 %34)
  %36 = load i8*, i8** %9, align 8
  %37 = getelementptr inbounds i8, i8* %36, i64 12
  %38 = load i64, i64* %6, align 8
  %39 = getelementptr inbounds i8, i8* %37, i64 %38
  %40 = load i64, i64* %7, align 8
  %41 = call i32 @SetDWLE(i8* %39, i64 %40)
  %42 = load i64, i64* %8, align 8
  %43 = load i64*, i64** %4, align 8
  store i64 %42, i64* %43, align 8
  %44 = load i8*, i8** %9, align 8
  store i8* %44, i8** %3, align 8
  br label %45

45:                                               ; preds = %24, %23
  %46 = load i8*, i8** %3, align 8
  ret i8* %46
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i8* @malloc(i64) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1

declare dso_local i32 @SetDWLE(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
